# Gist

./: Makefile.am  configure.ac
libs/kiss_fft130/: Makefile.am
src/: Makefile.am  gist_c.cpp  gist_c.h
src/mfcc/: MFCC.h
test/GistTest/: Makefile.am
